--- a/Assignment 1/Media Player/Media Player/MainWindow.xaml
+++ b/Assignment 1/Media Player/Media Player/MainWindow.xaml
@@ -35,7 +35,7 @@
             <Menu DockPanel.Dock="Top" >
                 <MenuItem Header="File">
                     <MenuItem Header="Open MP3" Command="ApplicationCommands.Open"/>
-                    <MenuItem Header="Tag Current MP3"/>
+                    <MenuItem x:Name="TagEditorMenu" Header="Tag Current MP3" Click="TagEdit_Click" IsEnabled="False"/>
                     <Separator/>
                     <MenuItem Header="Exit" Command="ApplicationCommands.Close"/>
                 </MenuItem>
@@ -53,45 +53,18 @@
         <!--Tag TextBlock-->
         <StackPanel Grid.Row="1" Grid.Column="1" Margin="15 0 0 0" HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <TextBlock Name="Title"  FontSize="32">
-                
+
             </TextBlock>
             <TextBlock x:Name="Artist" FontSize="32">
-                
+
             </TextBlock>
             <TextBlock x:Name="Album" FontSize="32">
-                
+
             </TextBlock>
         </StackPanel>
 
-        <!--Tag TextEditor-->
-
-        <StackPanel x:Name="TagEditor" Grid.Row="1" Grid.Column="1" Visibility="Visible" Width="400" Margin="15 0 0 0" HorizontalAlignment="Center" VerticalAlignment="Center" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
-                <TextBlock FontSize="28" HorizontalAlignment="Center" Margin="-1,0,0,0">
-                    Tag Editor
-                </TextBlock>
-                <TextBlock FontSize="28">
-                    Title:
-                </TextBlock>
-                <TextBox Name="TitleEditor"  FontSize="28" Margin="15,0,15,5">
-                    
-                </TextBox>
-                <TextBlock FontSize="28">
-                    Artist:
-                </TextBlock>
-            <TextBox x:Name="ArtistEditor" FontSize="28" Margin="15,0,15,5">
-
-                </TextBox>
-                <TextBlock FontSize="28">
-                    Album:
-                </TextBlock>
-            <TextBox x:Name="AlbumEditor" FontSize="28" Margin="15,0,15,10">
-
-                </TextBox>
-            <Separator Background="{DynamicResource {x:Static SystemColors.ActiveCaptionTextBrushKey}}"/>
-            <Button Width="100" Height="40" Margin="0 10 0 0">
-                Submit
-            </Button>
-        </StackPanel>
+        <!--Tag Editor-->
+        <local:TagEditorController x:Name="TagEditor" Grid.Row="1" Grid.Column="1" Visibility="Hidden"/>
 
         <!--Media Settings-->
         <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" 
@@ -99,7 +72,7 @@
             <Button Command="ApplicationCommands.Open" Height="75">
                 <Image Source="/open_file.png" Width="25" />
             </Button>
-            <Button Height="75">
+            <Button x:Name="TagEditBtn" Height="75" Click="TagEdit_Click" IsEnabled="False">
                 <Image Source="/tag_edit.png" Width="25"/>
             </Button>
             <Separator/>
@@ -115,12 +88,13 @@
         </StackPanel>
 
         <!--Media Time & slider-->
-        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" 
+        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Height="25"
                     Background="{DynamicResource {x:Static SystemColors.ControlLightLightBrushKey}}">
-            <TextBlock x:Name="lblProgressStatus" Margin="10 0 0 0">
+            <TextBlock x:Name="lblProgressStatus" Margin="10 0 0 0" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center">
                 00:00:00
             </TextBlock>
-            <Slider x:Name="sliProgress" Margin="10 0 0 0"/>
+            <Slider x:Name="MediaSlider" Margin="20 0 0 0" Width="660" Thumb.DragStarted="sliProgress_DragStarted"
+                    Thumb.DragCompleted="sliProgress_DragCompleted" ValueChanged="sliProgress_ValueChanged" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </StackPanel>
     </Grid>
 </Window>
