--- a/Assignment 1/Media Player/Media Player/MainWindow.xaml
+++ b/Assignment 1/Media Player/Media Player/MainWindow.xaml
@@ -15,27 +15,35 @@
         <CommandBinding Command="MediaCommands.Stop" CanExecute="Stop_CanExecute" Executed="Stop_Executed" />
     </Window.CommandBindings>
     <Grid>
+        <!--#region Defenitions-->
         <!--Column Defenitions-->
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition Width="18*"/>
         </Grid.ColumnDefinitions>
         <!--Grid Background Image-->
-        <Grid.Background>
-            <ImageBrush ImageSource="/textured.jpg" Stretch="Fill" Opacity="0.75"></ImageBrush>
-        </Grid.Background>
+        
         <!--Row Defenitions-->
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <!--Menu Pannel-->
+        <!--#endregion-->
+        
+        <!--#region Background-->
+        <Grid.Background>
+            <ImageBrush ImageSource="/textured.jpg" Stretch="Fill" Opacity="0.75"></ImageBrush>
+        </Grid.Background>
+        <!--#endregion-->
+        
+        <!--#Region Menu Pannel-->
         <DockPanel Grid.Row="0" Grid.ColumnSpan="2">
             <Menu DockPanel.Dock="Top" >
                 <MenuItem Header="File">
                     <MenuItem Header="Open MP3" Command="ApplicationCommands.Open"/>
-                    <MenuItem x:Name="TagEditorMenu" Header="Tag Current MP3" Click="TagEdit_Click" IsEnabled="False"/>
+                    <local:TagEditMenuControl x:Name="TagEditorMenu" IsEnabled="False"></local:TagEditMenuControl>
+                    <!--<MenuItem x:Name="TagEditorMenu" Header="Tag Current MP3" Click="TagEdit_Click" IsEnabled="False"/>-->
                     <Separator/>
                     <MenuItem Header="Exit" Command="ApplicationCommands.Close"/>
                 </MenuItem>
@@ -46,35 +54,64 @@
                 </MenuItem>
             </Menu>
         </DockPanel>
+        <!--#endregion-->
 
-        <!--Media Player-->
+        <!--#Region Media Player-->
         <MediaElement Name="mediaPlayer" Grid.Row="1" Grid.Column="1" LoadedBehavior="Manual" Stretch="None"/>
-
-        <!--Tag TextBlock-->
+        <!--#endregion-->
+        
+        <!--#Region Tag TextBlock-->
         <StackPanel Grid.Row="1" Grid.Column="1" Margin="15 0 0 0" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-            <TextBlock Name="Title"  FontSize="32">
-
-            </TextBlock>
-            <TextBlock x:Name="Artist" FontSize="32">
-
-            </TextBlock>
-            <TextBlock x:Name="Album" FontSize="32">
-
-            </TextBlock>
+            <TextBlock Name="Title"  FontSize="32"></TextBlock>
+            <TextBlock x:Name="Artist" FontSize="32"></TextBlock>
+            <TextBlock x:Name="Album" FontSize="32"></TextBlock>
         </StackPanel>
+        <!--#endregion-->
+        
+        <!--#Region Tag Editor-->
+        <Border x:Name="TagEditor" Grid.Row="1" Grid.Column="1" Visibility="Hidden" BorderThickness="3" BorderBrush="Black" Margin="15"
+                HorizontalAlignment="Stretch" VerticalAlignment="Center" 
+                Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
+            <StackPanel Margin="15">
+                <TextBlock FontSize="24" HorizontalAlignment="Center">
+                        Tag Editor
+                </TextBlock>
+                <TextBlock FontSize="24">
+                        Title:
+                </TextBlock>
+                <TextBox Name="TitleEditor"  FontSize="24" Margin="15,0,15,5">
 
-        <!--Tag Editor-->
-        <local:TagEditorController x:Name="TagEditor" Grid.Row="1" Grid.Column="1" Visibility="Hidden"/>
+                </TextBox>
+                <TextBlock FontSize="24">
+                        Artist:
+                </TextBlock>
+                <TextBox x:Name="ArtistEditor" FontSize="24" Margin="15,0,15,5">
 
-        <!--Media Settings-->
+                </TextBox>
+                <TextBlock FontSize="24">
+                        Album:
+                </TextBlock>
+                <TextBox x:Name="AlbumEditor" FontSize="24" Margin="15,0,15,10">
+
+                </TextBox>
+                <Separator Background="{DynamicResource {x:Static SystemColors.ActiveCaptionTextBrushKey}}"/>
+                <Button Width="100" Height="40" Margin="0 10 0 0" Click="SubmitTag_Click">
+                    Submit
+                </Button>
+            </StackPanel>
+        </Border>
+        <!--#endregion-->
+
+        <!--#Region Media Settings-->
         <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" 
                     Background="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}">
             <Button Command="ApplicationCommands.Open" Height="75">
                 <Image Source="/open_file.png" Width="25" />
             </Button>
-            <Button x:Name="TagEditBtn" Height="75" Click="TagEdit_Click" IsEnabled="False">
-                <Image Source="/tag_edit.png" Width="25"/>
-            </Button>
+            
+            <!--Custom Controller with event-->
+            <local:TagEditBtnControl x:Name="TagEditBtn" IsEnabled="False"></local:TagEditBtnControl>
+            
             <Separator/>
             <Button Command="MediaCommands.Play" Height="80">
                 <Image Source="/media-play.png" Width="25"/>
@@ -86,8 +123,9 @@
                 <Image Source="/stop-icon.png" Width="25"/>
             </Button>
         </StackPanel>
+        <!--#endregion-->
 
-        <!--Media Time & slider-->
+        <!--#Region Media Time & slider-->
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Height="25"
                     Background="{DynamicResource {x:Static SystemColors.ControlLightLightBrushKey}}">
             <TextBlock x:Name="lblProgressStatus" Margin="10 0 0 0" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -96,5 +134,6 @@
             <Slider x:Name="MediaSlider" Margin="20 0 0 0" Width="660" Thumb.DragStarted="sliProgress_DragStarted"
                     Thumb.DragCompleted="sliProgress_DragCompleted" ValueChanged="sliProgress_ValueChanged" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </StackPanel>
+        <!--#endregion-->
     </Grid>
 </Window>
