--- a/Assignment 2/NoteBook/NoteBook/NoteBook/MainPage.xaml
+++ b/Assignment 2/NoteBook/NoteBook/NoteBook/MainPage.xaml
@@ -33,7 +33,7 @@
             <ColumnDefinition Width="393*"/>
         </Grid.ColumnDefinitions>
 
-        <Border BorderThickness="1" BorderBrush="SpringGreen" Margin="0 0 0 5">
+        <Border BorderThickness="1" BorderBrush="SpringGreen" Margin="2">
             <TextBox x:Name="FilterTextbox" 
                  Text="{x:Bind NoteFileViewModel.Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                  PlaceholderText="Search Note here..."
@@ -42,18 +42,24 @@
             </TextBox>
         </Border>
 
-        <ScrollViewer Grid.Row="1" Grid.Column="0">
-            <Border BorderThickness="1" BorderBrush="SpringGreen">
+        <Border Grid.Row="1" Grid.Column="0" BorderThickness="1" BorderBrush="SpringGreen" Margin="2">
+            <ScrollViewer>
                 <ListView
-                    ItemsSource="{Binding Source={StaticResource NoteFilesCollection}}"
-                    ItemTemplate="{Binding Source={StaticResource NoteFilesTemplate}}"
-                    SelectedItem="{x:Bind NoteFileViewModel.SelectedFile, Mode=TwoWay}">
-                </ListView>
-            </Border>
-        </ScrollViewer>
+                        ItemsSource="{Binding Source={StaticResource NoteFilesCollection}}"
+                        ItemTemplate="{Binding Source={StaticResource NoteFilesTemplate}}"
+                        SelectedItem="{x:Bind NoteFileViewModel.SelectedFile, Mode=TwoWay}">
+                    </ListView>
+            </ScrollViewer>
+        </Border>
 
-        <StackPanel Grid.Column="1" Grid.RowSpan="2" Margin="5">
-            <TextBox ScrollViewer.HorizontalScrollMode="Auto" x:Name="fileText" Width="550" Height="700" AcceptsReturn="True" Margin="0 5 0 0"
+
+        <Border Grid.Column="1" Grid.Row="0" BorderThickness="1" BorderBrush="SpringGreen" Margin="1" Height="70">
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="26"
+                       Text="{x:Bind NoteFileViewModel.fileName, Mode=TwoWay}"></TextBlock>
+        </Border>
+
+        <StackPanel Grid.Column="1" Grid.Row="1">
+            <TextBox ScrollViewer.HorizontalScrollMode="Auto" x:Name="fileText" Width="550" Height="600" AcceptsReturn="True" Margin="0 20"
                      TextWrapping="Wrap" Text="{x:Bind NoteFileViewModel.fileContent, Mode=TwoWay}"/>
         </StackPanel>
 
@@ -63,23 +69,23 @@
         <CommandBar>
             <CommandBar.SecondaryCommands>
                 <AppBarButton x:Name="About" Label="About" ToolTipService.ToolTip="Info"
-                             Command="{x:Bind NoteFileViewModel.aboutCommand}"></AppBarButton>
+                             Command="{x:Bind NoteFileViewModel.aboutC}"></AppBarButton>
                 <AppBarButton x:Name="Exit" Label="Exit" ToolTipService.ToolTip="Exit Application"
-                               Command="{x:Bind NoteFileViewModel.exitCommand}">
+                               Command="{x:Bind NoteFileViewModel.exitC}">
                 </AppBarButton>
             </CommandBar.SecondaryCommands>
             <AppBarButton
                     Icon="Add" Label="Add" ToolTipService.ToolTip="Create Blank Note"
-                Command="{x:Bind NoteFileViewModel.createCommand}">
+                Command="{x:Bind NoteFileViewModel.createC}">
             </AppBarButton>
             <AppBarButton Icon="Save" Label="Save" ToolTipService.ToolTip="Save to File"
-                Command="{x:Bind NoteFileViewModel.saveCommand}">
+                Command="{x:Bind NoteFileViewModel.saveC}">
             </AppBarButton>
             <AppBarButton Icon="Edit" Label="Edit" ToolTipService.ToolTip="Edit Note"
-                Command="{x:Bind NoteFileViewModel.editCommand}">
+                Command="{x:Bind NoteFileViewModel.editC}">
             </AppBarButton>
             <AppBarButton Icon="Delete" Label="Delete" ToolTipService.ToolTip="Delete Note"
-                Command="{x:Bind NoteFileViewModel.deleteCommand}">
+                Command="{x:Bind NoteFileViewModel.deleteC}">
             </AppBarButton>
         </CommandBar>
     </Page.BottomAppBar>
